# uuidxx

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  anvil.py  build.py
cmake/: clang_tidy.cmake  compiler_msvc.cmake  compiler_posix.cmake  install.cmake  uuidxx-config.cmake.in
tests/: CMakeLists.txt  uuid_test.cpp
uuidxx/: CMakeLists.txt  clock_sequence.cpp  clock_sequence.h  dce_host_identifier.h  endian_utils.h  mac_address_posix.cpp  mac_address_win.cpp  node_fetcher.cpp  node_fetcher.h  rand_generator.h  uuid.cpp  uuid.h  uuidxx.h
